<resources>
    <string name="app_name">D3IN</string>
    <string name="qing">精选</string>
    <string name="jing">发现</string>
    <string name="fiu">购物车</string>
    <string name="pin">好货</string>
    <string name="mine">个人</string>
    <string name="login">登录</string>
    <string name="subscribe">订阅</string>
    <string name="register">注册</string>
    <string name="qj_theme">情境主题</string>
    <string name="forget_password">忘记登录密码?</string>
    <string name="forget_password_tips">如果您忘记了密码,可以通过手机号找回</string>
    <string name="network_err">网络错误</string>
    <string name="subscribe_theme">订阅你感兴趣的情境主题</string>
    <string name="focus_user">关注你感兴趣的人</string>
    <string name="known_more">关于你我们想了解更多</string>
    <string name="theme_subtitle">每个人心中都有一个不曾到过的美景，每个人心中都有一个不曾拥有的美物</string>
    <string name="focus_subtitle">栖息了全球数千万希望用创意和梦想去改变平凡世界的品质生活家</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">意见与反馈</string>
    <string name="partners">战略伙伴App</string>
    <string name="push_tip">如果你关闭或开启新消息通知，请在“设置”－“通知和状态栏”功能中，找到应用程序“D3IN”更改</string>
    <string name="net_fail">网络错误</string>
    <string name="input_invite_code">请输入您的邀请码</string>
    <string name="prize_num">%1$s%2$s名</string>
    <string name="please_select">请选择</string>
    <string name="please_select_address">请选择收货地址</string>
    <string name="consignee_address_change">收货地址更新</string>
    <string name="address_change_tips">地址管理优化啦，快来填写一个新地址试试吧。</string>
    <string name="order_separate_tips">以下商品由京东商城发货，请您分开结算</string>
    <string name="film_album">Camera</string>
    <string name="crop_picture">剪切图片</string>
    <string name="tools">工具</string>
    <string name="biaoji_chanpin">标记产品</string>
    <string name="filter">滤镜</string>
    <string name="title_edit_picture_aJust">调整</string>
    <string name="more_three_products">您最多可以添加三个商品</string>
    <string name="more_three_chaining">您最多可以添加三个链接</string>
    <string name="add_url">添加链接</string>
    <string name="search_products">搜索产品</string>
    <string name="jingdong">京东</string>
    <string name="taobao">淘宝</string>
    <string name="tianmao">天猫</string>
    <string name="yamaxun">亚马逊</string>
    <string name="select_qj">选择情境</string>
    <string name="search_qj">搜索情境</string>
    <string name="focus">关注</string>
    <string name="focused">已关注</string>
    <string name="find">发现</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="input_product_title">输入商品名称</string>
    <string name="confirm_add">确认添加</string>
    <string name="qj_detail">情境详情</string>
    <string name="create_qingjing">创建情境</string>
    <string name="bianji_scene">编辑情境</string>
    <string name="bianji_qingjing">编辑情境</string>
    <string name="publish">发布</string>
    <string name="modify">修改</string>
    <string name="add_label">添加标签</string>
    <string name="confirm">确定</string>
    <string name="love_person">赞的人</string>
    <string name="add_product">添加好货</string>
    <string name="comment">评论</string>
    <string name="select_qingjing">选择地盘</string>
    <string name="report">举报</string>
    <string name="return_goods">退款/售后</string>
    <string name="has_love">赞过的情境</string>
    <string name="delete">删除</string>
    <string name="name_is_empty">收货人不能为空！</string>
    <string name="phone_is_empty">手机号码不能为空！</string>
    <string name="phone_is_err">手机号不正确！</string>
    <string name="address_details_is_empty">详细地址不能为空！</string>
    <string name="zip_is_empty">邮政编码不能为空！</string>
    <string name="no_default_address">默认地址不存在！</string>
    <string name="note_pull_loading">刷新中&#8230;</string>
    <string name="note_pull_down">往下拉更新数据&#8230;</string>
    <string name="note_pull_refresh">放开更新数据&#8230;</string>
    <string name="not_switch_sku">请选择颜色/分类</string>
    <string name="note_update_at">上一次刷新：%1$s</string>
    <string name="note_not_update">尚未更新</string>
    <string name="all_order">全部订单</string>
    <string name="subs">订阅</string>
    <string name="delete_success">删除成功</string>
    <string name="edit_address">编辑收货地址</string>
    <string name="transfer_time_a">任意时间</string>
    <string name="transfer_time_b">周一到周五</string>
    <string name="transfer_time_c">周六、日</string>
    <string name="startlocation">定位</string>
    <string name="stoplocation">停止</string>
    <string name="select_city">选择城市</string>
    <string name="locating">定位中…</string>
    <string name="location_error">定位失败</string>
    <string name="complete">完成</string>
    <string name="please_input">请输入</string>
    <string name="loading">加载中…</string>
    <string name="btn_done">OK</string>
    <string name="btn_reset">Reset</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="title_user_data">个人信息</string>
    <string name="user_avatar">头像</string>
    <string name="user_name">用户名</string>
    <string name="nick_name">用户名（昵称）</string>
    <string name="user_signature">个性签名</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="user_auth">官方认证</string>
    <string name="user_code">我的二维码 </string>
    <string name="sao_yi_sao">扫一扫</string>
    <string name="save_qrcode">长按保存二维码</string>
    <string name="copy_link">复制链接</string>
    <string name="user_area">地区</string>
    <string name="title_modify_nickname">修改昵称</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="select_birth">请选择出生日期</string>
    <string name="select_gender">请选择性别</string>
    <string name="select_tag">请选择个性标签</string>
    <string name="select_address">请选择地址</string>
    <string name="input_signature">您还没有个性签名</string>
    <string name="complete_user_info">选好了，开始D3IN之旅</string>
    <string name="first_in_qing_title">情境定位</string>
    <string name="first_in_qing_des">挪动图标，发现全世界的美事儿，给心思找个落脚点</string>
    <string name="first_in_jing_title">情境布局</string>
    <string name="first_in_jing_des">给自己设一个局，换一处风情、换一面质地、换各色朝朝暮暮</string>
    <string name="first_in_fiu_title">D3IN是什么</string>
    <string name="first_in_fiu_des">敢挑剔，敢为每一处细节用尽心力，在这里编辑影像，D3IN同寻常</string>
    <string name="first_in_pin_title">品牌Mall</string>
    <string name="first_in_pin_des">你的欲望，予我追寻格调的动力；我的橱窗，给你智居的千方百计</string>
    <string name="first_in_wo_title">个人Profile（编辑我的主页）</string>
    <string name="first_in_wo_des">不为人知的，呼之欲出的都放在这里</string>
    <string name="order_interest_qj">触动双眸的、与我共鸣的、鲜明新奇的，关注地盘给印象一个回忆的中轴线</string>
    <string name="complete_info">猜来猜去的游戏已落伍，取一个昵称，撕开日常标签，给同路者关注你的机会</string>
    <string name="select_tag_tip">选择一个标签或输入15字以内的描述</string>
    <string name="user_center_qj_tip">每个地盘都有故事，来都来了，讲讲你的故事吧</string>
    <string name="user_center_qj_tip1">你们好像在哪儿见过，来看看他的足迹吧</string>
    <string name="user_center_cj_tip">你还没有发表过新情境哦，快来D3IN一下嘛</string>
    <string name="user_center_cj_tip1">关于TA的经历，你想知道的可能都在这里</string>
    <string name="focus_tips">偷偷告诉你：关注越多，推送越精准哦</string>
    <string name="focus_tips1">你一定是想关注我，才点进来的对吧</string>
    <string name="fans_tips">给你一首歌的时间就回来哦，粉丝们还等着你的新动态呢</string>
    <string name="fans_tips1">众里寻他千百度，爱人之心不可无</string>
    <string name="share_txt">我在D³IN寻找同路人；希望和你一起用文字来记录内心情绪，用滤镜来表达情感色彩，用分享去变现原创价值；带你发现美学科技的力量和感性生活的温度！>>> https://m.taihuoniao.com/d3in</string>
    <string name="title_url">http://m.taihuoniao.com/guide/fiu/</string>
    <string name="l_album_name_all">最近图片</string>
    <string name="l_album_name_selected">选择图片</string>
    <string name="l_album_name_camera">相机</string>
    <string name="l_album_name_download">下载</string>
    <string name="l_album_name_screen_shot">屏幕截图</string>
    <string name="l_confirm_dialog_title">提示</string>
    <string name="l_confirm_dialog_message">您确定要放弃本次选择的图片吗?</string>
    <string name="fiu_redbag">D3IN红包</string>
    <string name="redbag_code">红包码：xxxxx</string>
    <string name="less_money">最低使用限额：99元</string>
    <string name="money">¥</string>
    <string name="used_labels">使用过的标签</string>
    <string name="hot_labels">热门标签</string>
    <string name="all_labels">全部标签</string>
    <string name="please_select_one">请在情绪、环境、时间、人物中各选一个</string>
    <string name="commit">提交</string>
    <string name="consignee_name">收货人姓名</string>
    <string name="title_consignee_address">收货地址</string>
    <string name="new_consignee_address">新增收货地址</string>
    <string name="phone">手机</string>
    <string name="postcode">邮政编码</string>
    <string name="beijing">北京市</string>
    <string name="dongcheng">东城区</string>
    <string name="detail_address">详细地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="my_order">我的订单</string>
    <string name="look_all">查看全部</string>
    <string name="obligation">待付款</string>
    <string name="wait_for_delivery">待发货</string>
    <string name="waiting_for_goods">待收货</string>
    <string name="waiting_for_comments">待评价</string>
    <string name="changing_or_refunding">退换货</string>
    <string name="jingdong_orders">京东订单</string>
    <string name="taobao_orders">淘宝订单</string>
    <string name="tianmao_orders">天猫订单</string>
    <string name="yamaxun_orders">亚马逊订单</string>
    <string name="all_qingjing">全部地盘</string>
    <string name="application_for_drawback">申请退款：</string>
    <string name="refund">退款</string>
    <string name="refund_reason">退款原因：</string>
    <string name="want_not_buy">我不想要了</string>
    <string name="refund_money">退款金额：</string>
    <string name="write_your_reason">写下您的退款理由吧</string>
    <string name="search_sites">搜索地点</string>
    <string name="bind_had_phone">绑定已太火鸟账户</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="bind">立即绑定</string>
    <string name="skip_bind">绑定已有帐号</string>
    <string name="login_now">首次加入D3IN,立即登录</string>
    <string name="send">发送</string>
    <string name="take_comment">评论一下</string>
    <string name="you_are_first_comment">你可是第一个看到它的人，快来评论一下吧</string>
    <string name="no_comments">暂无评论</string>
    <string name="save_money">节省:</string>
    <string name="confirm_order">确认订单</string>
    <string name="all_money">合计:</string>
    <string name="set_address">请设置收货地址</string>
    <string name="shipping_method">运费：</string>
    <string name="free_shipping">免费配送</string>
    <string name="shipping_time">送货时间：</string>
    <string name="any_time">任意时间</string>
    <string name="use_redbag" translatable="false">使用红包：</string>
    <string name="no_redbag">无可用红包</string>
    <string name="used_a_redbag">您使用了一张5元红包，下单后将不可恢复</string>
    <string name="remark">备注：</string>
    <string name="input_more_twenty">想省事？向右看，D3IN语境有你要的文字</string>
    <string name="add_des">添加描述</string>
    <string name="add_address">添加地点</string>
    <string name="label">标签</string>
    <string name="belong_what_qingjing">所属地盘</string>
    <string name="mark_product">标记产品</string>
    <string name="add_chain">添加链接</string>
    <string name="back">返回</string>
    <string name="goods_category">好货分类</string>
    <string name="goods_details">商品详情</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="to_buy">去购买</string>
    <string name="brand">品牌</string>
    <string name="mine_brand">自营品牌</string>
    <string name="product_lightspot">好货描述/亮点</string>
    <string name="select_all">全选</string>
    <string name="account">去结算</string>
    <string name="cart_is_empty">购物车又空啦，回“好货”入点新货吧</string>
    <string name="go_for_stroll">去逛逛</string>
    <string name="hot_fiuer">热D3IN</string>
    <string name="bigger_no_low_profile">[有Bigger不低调]</string>
    <string name="new_land">新Land</string>
    <string name="enclosure_is_earnings">[圈地盘有收益]</string>
    <string name="high_sight">High情境</string>
    <string name="whoever_with_addiction">[谁用谁上瘾]</string>
    <string name="severe_brands">牛Brands</string>
    <string name="good_here">[尖货这里找]</string>
    <string name="fiu_things">D3IN好货</string>
    <string name="more_goods_more_brands">[东西不少，牌子不小]</string>
</resources>