<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f4f4f4"
                android:fitsSystemWindows="true">

    <com.taihuoniao.fineix.view.GlobalTitleLayout
        android:id="@+id/activity_addnewaddress_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/activity_addnewaddress_commitbtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_222"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/activity_addnewaddress_commitbtn"
        android:layout_below="@id/activity_addnewaddress_title"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/activity_addnewaddress_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/consignee_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/activity_addnewaddress_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/activity_addnewaddress_postcode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/postcode"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/activity_addnewaddress_addresslinear"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_product_white_corner"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <TextView
                android:id="@+id/activity_addnewaddress_province"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/beijing"
                android:textColor="#000000"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_addnewaddress_city"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/dongcheng"
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/activity_addnewaddress_addressdetails"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_product_white_corner"
            android:hint="@string/detail_address"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textSize="16sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_product_white_corner"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/set_default_address"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap"/>

            <ImageView
                android:id="@+id/activity_addnewaddress_isdefault"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingBottom="7dp"
                android:paddingRight="12dp"
                android:paddingTop="7dp"
                android:src="@mipmap/switch_on"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>