<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_white_4dp"
    android:padding="@dimen/dp20">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/consignee_address_change"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp16" />
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="@dimen/dp250"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp14"
        android:gravity="center"
        android:text="@string/address_change_tips"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"
        />
    <Button
        android:id="@+id/btn"
        android:layout_below="@+id/tv_tips"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/dp250"
        android:layout_height="@dimen/dp40"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp5"
        android:background="@drawable/shap_redbutton_commit"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />
</RelativeLayout>