<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">


    <com.taihuoniao.fineix.view.ScrollableView
        android:id="@+id/scrollableView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:paddingLeft="13dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/fiu_huoban"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/hot_fiuer"
            android:textColor="#222222"
            android:textSize="13sp"/>
        <!-- 999999 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/bigger_no_low_profile"
            android:textColor="#999999"
            android:textSize="11sp"/>
    </LinearLayout>

    <com.taihuoniao.fineix.view.appleWatchView.AppleWatchView
        android:id="@+id/fragment_find_absolute"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:background="@color/f0f0f0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e4e4e4"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_find_labelrecycler"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e4e4e4"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/fragment_find_allqingjing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/look_all"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_toLeftOf="@id/fragment_find_allqingjing"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/fiu_qj"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/new_land"
                android:textColor="#222222"
                android:textSize="13sp"/>
            <!-- 999999 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:text="@string/enclosure_is_earnings"
                android:textColor="#999999"
                android:textSize="11sp"/>
        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_find_qingjing_recycler"
        android:layout_width="match_parent"
        android:layout_height="267dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:paddingLeft="13dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/fiu_cj"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/high_sight"
            android:textColor="#222222"
            android:textSize="13sp"/>
        <!-- 999999 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/whoever_with_addiction"
            android:textColor="#999999"
            android:textSize="11sp"/>
    </LinearLayout>


</LinearLayout>