<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <com.taihuoniao.fineix.view.ScrollableView
        android:id="@+id/scrollableView"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="13dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/fiu_brand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/severe_brands"
            android:textColor="#222222"
            android:textSize="13sp"/>
        <!-- 999999 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/good_here"
            android:textColor="#999999"
            android:textSize="11sp"/>
    </LinearLayout>

    <com.taihuoniao.fineix.view.appleWatchView.AppleWatchView
        android:id="@+id/fragment_wellgoods_absolute"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:background="#f0f0f0">

    </com.taihuoniao.fineix.view.appleWatchView.AppleWatchView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e4e4e4"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_wellgoods_label_recycler"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_wellgoods_recycler"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e4e4e4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#f7f7f7"
        android:orientation="horizontal"
        android:paddingLeft="13dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/fiu_chanpin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/fiu_things"
            android:textColor="#222222"
            android:textSize="13sp"/>
        <!-- 999999 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:text="@string/more_goods_more_brands"
            android:textColor="#999999"
            android:textSize="11sp"/>
    </LinearLayout>

</LinearLayout>